feat: 포스트 UI 변경

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -38,3 +38,7 @@ body {
 .notion-page-cover-wrapper {
   box-shadow: 2px 2px 8px 4px rgba(15, 15, 15, 0.1);
 }
+
+.notion-aside-table-of-contents-header {
+  display: none;
+}
