--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -28,7 +28,7 @@ body {
 }
 
 .notion-collection-page-properties {
-  display: none;
+  display: none !important;
 }
 
 @media only screen and (max-width: 1200px) {
