--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: Spoqa Han Sans Neo, 'Noto Sans KR', -apple-system, BlinkMacSystemFont, system-ui,
-    Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue, sans-serif;
+    Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue, sans-serif !important;
 
   min-width: 360px;
 }
